[gd_scene load_steps=14 format=3 uid="uid://b2rvph4d7cjs7"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_3cssu"]
[ext_resource type="Texture2D" uid="uid://x1todv6vloec" path="res://resources/mainMenuImages/kitchen_bg.png" id="1_nb06r"]
[ext_resource type="Texture2D" uid="uid://db0tcw21fco5c" path="res://resources/items/dome.png" id="2_njici"]
[ext_resource type="PackedScene" uid="uid://gnv1dw4wjocb" path="res://scenes/jimbo.tscn" id="3_767yi"]
[ext_resource type="PackedScene" uid="uid://c8ovx0thtudnq" path="res://scenes/idle_timer.tscn" id="4_86uk0"]
[ext_resource type="AudioStream" uid="uid://cy7fm038st8qw" path="res://resources/music/roamFree.mp3" id="6_35gbh"]
[ext_resource type="PackedScene" uid="uid://cq06iprx87piv" path="res://scenes/draging_fly.tscn" id="7_6nlua"]
[ext_resource type="PackedScene" uid="uid://xrx5ih0ivcf6" path="res://scenes/the_watcher_ant_event.tscn" id="8_wgkhl"]
[ext_resource type="PackedScene" uid="uid://c2mmotn4iaw4q" path="res://scenes/fissure_frenzy.tscn" id="9_vjovp"]
[ext_resource type="Theme" uid="uid://djy31ft15cjh0" path="res://resources/themes/BuffDebuffPanel/EvemtBuff.tres" id="9_x8r8r"]
[ext_resource type="PackedScene" uid="uid://barlkibl67nja" path="res://scenes/gitch_moth.tscn" id="10_k5q8p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nveef"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.929784, 0.136978, 0.25831, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.953814, 0.547137, 0.380314, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_0b8a3"]
Panel/styles/panel = SubResource("StyleBoxFlat_nveef")

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3cssu")

[node name="MainContent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="MainContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -33.0
offset_right = 228.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.85, 0.85)
texture = ExtResource("1_nb06r")

[node name="Dome" type="TextureRect" parent="MainContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -167.0
offset_right = 169.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_njici")

[node name="jimbo" parent="MainContent" instance=ExtResource("3_767yi")]
position = Vector2(38.0001, 81)
flip_h = true

[node name="BuffContainers" type="GridContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 20.0
offset_top = 19.0
offset_right = 120.0
offset_bottom = 448.0

[node name="Buff" type="Panel" parent="BuffContainers"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("9_x8r8r")

[node name="Debuff" type="Panel" parent="BuffContainers"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = SubResource("Theme_0b8a3")

[node name="DebugCheck" type="Node" parent="."]

[node name="IdleTimer" parent="DebugCheck" instance=ExtResource("4_86uk0")]

[node name="RandomEvent" type="Node" parent="."]

[node name="DragingFlyEvent" parent="RandomEvent" instance=ExtResource("7_6nlua")]

[node name="TheWatcherAntEvent" parent="RandomEvent" instance=ExtResource("8_wgkhl")]
offset_top = -7.0
offset_bottom = -7.0

[node name="FissureFrenzy" parent="RandomEvent" instance=ExtResource("9_vjovp")]

[node name="GitchMoth" parent="RandomEvent" instance=ExtResource("10_k5q8p")]

[node name="EventCooldown" type="Timer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_35gbh")
autoplay = true

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="GlitchSFX" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="EventCooldown" to="." method="_on_event_cooldown_timeout"]
